--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,4 +1,21 @@
 .chat {
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  height: 70px;
+  border-bottom: 1px solid #fafafa;
+}
+
+.chat__details {
+  flex: 1;
+  padding: 20px;
+}
+
+.chat__timestamp {
+  color: lightgray;
+}
+
+.chat__details > p {
+  color: gray;
 }
